--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title> 爱心代码 </title>
+    <title> NNMD </title>
     <meta charset="utf-8">
-    <meta name="Keywords" content="爱心代码，程序员表白">
-    <meta name="Description" content="爱心代码，HTML文件，程序员何未来GitHub爱心代码项目">
-    <link rel="shortcut icon" href="../picture/爱心.png" type="image/x-icon">
+    <meta name="Keywords" content="NNMD">
+    <meta name="Description" content="NNMD, LOVE CODE, GITHUB">
+    <link rel="shortcut icon" href="../picture/love.png" type="image/x-icon">
     <!--   github.com/he-weilai/love-code   -->
     <style>
         html,
@@ -17,7 +17,7 @@
         }
 
         body {
-            background-image: url(../picture/VCG211283895629.jpg);
+            background-image: url(../picture/love.jpg);
         }
 
         canvas {
@@ -55,7 +55,7 @@
 
     <canvas id="pinkboard"></canvas>
 
-    <div class="title">恋爱100天纪念日</div>
+    <div class="title">LOVE YOU</div>
     <script>
 
         var settings = {
