--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         body {
-            background-image: url(../picture/love.jpg);
+            background-image: url(../love.jpg);
         }
 
         canvas {
