--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="Keywords" content="NNMD">
     <meta name="Description" content="NNMD, LOVE CODE, GITHUB">
-    <link rel="shortcut icon" href="../picture/love.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../love.png" type="image/x-icon">
     <!--   github.com/he-weilai/love-code   -->
     <style>
         html,
