--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="Keywords" content="NNMD">
     <meta name="Description" content="NNMD, LOVE CODE, GITHUB">
-    <link rel="shortcut icon" href="../love.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/medalary/Love-code/love.png" type="image/x-icon">
     <!--   github.com/he-weilai/love-code   -->
     <style>
         html,
@@ -17,7 +17,7 @@
         }
 
         body {
-            background-image: url(../love.jpg);
+            background-image: url(https://github.com/medalary/Love-code/love.jpg);
         }
 
         canvas {
